make_group_function

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -34,6 +34,6 @@
           type a message
         %label.body__main__footer__message--img
           = fa_icon 'image'
-          %input.icon{:type=>"file",:name=>"image"}
+          %input.icon{type:"file",name:"image"}
       .body__main__footer--send
         Send
