--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -3,10 +3,11 @@
     グループ作成しました
   .body__headerleft
     .body__headerleft--name
-      seo
+      = current_user.name
     .body__headerleft--icon
       = fa_icon 'edit'
-      = fa_icon 'cog'
+      = link_to edit_user_path(current_user) do
+        = fa_icon 'cog', class: 'icon'
   .body__headerright
     .body__headerright__groupmember
       .body__headerright__groupmember--title
