--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -5,7 +5,8 @@
     .body__headerleft--name
       = current_user.name
     .body__headerleft--icon
-      = fa_icon 'edit'
+      = link_to new_group_path do
+        = fa_icon 'pencil-square-o', class: 'icon'
       = link_to edit_user_path(current_user) do
         = fa_icon 'cog', class: 'icon'
   .body__headerright
