--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,10 @@
- @import "reset";
+ @import "config/reset";
  @import "config/colors";
- @import "font-awesome";
- @import "posts";
  @import "modules/user";
  @import "modules/flash";
  @import "modules/group";
+ //@import "modules/chat";
+ @import "font-awesome";
+ @import "side_bar";
+ @import "main_chat";
+ 
