--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -9,7 +9,7 @@
             =user.name
     .right-header
       .right__button
-        = link_to edit_group_path(current_user) do
+        = link_to edit_group_path(@group) do
           Edit
   .messages
     = render @messages
